<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:background="@drawable/round_corner_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:paddingTop="@dimen/dp40">

            <TextView
                android:textAppearance="@style/TextAppearance.Lato.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/phone_no_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:singleLine="true"
                android:textColor="@color/color_gray_dark"
                android:text="@string/correct_mobile_label"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/entered_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:singleLine="true"
                android:textColor="#0489c4"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dp40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bottom_left_dialog"
                android:gravity="center"
                android:padding="@dimen/dp15"
                android:text="@string/dialog_edit"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_16sp" />


            <TextView
                android:id="@+id/dialog_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/round_corner_bottom_right_dialog"
                android:gravity="center"
                android:padding="@dimen/dp15"
                android:text="@string/dialog_ok"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

